[Fix] Ladebalken z-index - [Neu] Zurück auf der 404-Seite

--- a/styles/allgemein.less
+++ b/styles/allgemein.less
@@ -16,7 +16,7 @@ body {
   left: 0;
   width: 100%;
   height: 3px;
-  z-index: 1000;
+  z-index: 100000001;
 }
 
   #dshSeiteladenI {
